--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -5,5 +5,7 @@
     "commonSuccessTitle": "Success",
     "commonSuccessMessage": "Nice!",
     "commonErrorTitle": "Error",
-    "commonErrorMessage": "Something went wrong, please try again"
+    "commonErrorMessage": "Something went wrong, please try again",
+    "networkErrorTitle": "Network Error",
+    "networkErrorMessage": "Something wrong when trying to connect to the server"
 }
